# chatclerk

./: Makefile  README.md  chatgpt-to-markdown.py  claude-to-markdown.py  grok-to-markdown.py  justfile  pyproject.toml
src/chatclerk/: __init__.py  argparse.py  chatgpt.py  claude.py  datetime.py  grok.py  kagi.py
