[project]
name = "chatclerk"
version = "0.1.0"
description = "Convert LLM chat exports to Markdown, preserving conversation structure and artefacts."
readme = "README.md"
authors = [{ name = "Scott Stevenson", email = "scott@stevenson.io" }]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
chatclerk-chatgpt = "chatclerk.chatgpt:main"
chatclerk-claude = "chatclerk.claude:main"
chatclerk-grok = "chatclerk.grok:main"
chatclerk-kagi = "chatclerk.kagi:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["ruff>=0.14.2", "ty>=0.0.18"]

[tool.ruff]
target-version = "py314"

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812", # Trailing comma missing
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ty.rules]
all = "error"
